--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -12,11 +12,13 @@ body {
 #game-area {
     position: fixed;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh; /* Ensure at least 100% viewport height */
     left: 0;
     text-align: center;
     border: 1px solid;
     overflow-y: auto; /* Enable vertical scrolling */
+    padding-bottom: 50px; /* Add some padding at the bottom */
+    box-sizing: border-box;
 }
 
 #score-board p {
